[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "notion-api"
authors = [
    {name = "Alan Vickers", email = "alan.k.vickers@gmail.com"},
]
description = "A wrapper for Notion's API, aiming to simplify the dynamic nature of interacting with Notion."
dynamic = ["version", "readme", "license"]
requires-python = ">=3.10"
keywords = [
    "notion-api", 
    "wrapper", 
    "notion-version-2022-06-28"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]
dependencies = [
    "python-dotenv==1.0.0",
    "requests==2.28.2",
    "pytz==2022.7.1",
    "tzlocal==4.2",
    "jsonpath-ng==1.5.3",
]

[project.urls]
Homepage = "https://github.com/ayvi-0001/notion-api"
"Source Code" = "https://github.com/ayvi-0001/notion-api"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [
  { path = "README.md" },
]

[tool.hatch.version]
source = "code"
search-paths = ["notion"]
path = "notion/api/_about.py"

[tool.hatch.license]
path = "LICENSE"
search-paths = ["/"]

[tool.hatch.build]
include = [
  "/notion",
  "/notion*",
  "README.md",
  "LICENSE",
]
exclude = [
  ".gitignore",
  ".gitattributes",
  "/images",
]

[project.optional-dependencies]
orjson = [
    "orjson==3.8.6"
]
dev = [
    "black==23.1.0",
    "isort==5.12.0",
    "mypy==1.1.1",
    "mypy-extensions==1.0.0",
    "typing_extensions==4.5.0",
    "types-pytz==2022.7.1.2",
    "types-requests==2.28.11.15",
    "types-tzlocal==4.2.2.3",
    "types-urllib3==1.26.25.8"
]

[tool.black]
line-length = 89
target-version = ['py37']

[tool.isort]
profile = "black"
skip_glob=['*']

[tool.mypy]
strict = true
pretty = true
mypy_path = "./lib/"
show_error_codes = true
incremental = true
python_version = "3.10"
disallow_untyped_defs = true
warn_return_any = false
show_column_numbers = true
show_error_context = true
allow_redefinition = true
