[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "notion-api"
authors = [
    {name = "Alan Vickers", email = "alan.k.vickers@gmail.com"},
]
description = "An unofficial wrapper for Notion's API, aiming to simplify the dynamic nature of interacting with Notion."
dynamic = ["version", "readme", "license"]
requires-python = ">=3.10"
keywords = [
    "notion", 
    "notion-api", 
    "api-wrapper", 
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]
dependencies = [
    "requests>=2.28.2",
    "pytz>=2022.7.1",
    "tzlocal>=4.2",
]

[project.urls]
Homepage = "https://github.com/ayvi-0001/notion-api"
"Source Code" = "https://github.com/ayvi-0001/notion-api"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [
  { path = "README.md" },
]

[tool.hatch.version]
source = "code"
search-paths = ["notion"]
path = "notion/api/_about.py"

[tool.hatch.license]
path = "LICENSE"
search-paths = ["/"]

[tool.hatch.build]
include = [
  "/notion",
  "/notion*",
  "README.md",
  "LICENSE",
]
exclude = [
  ".gitignore",
  ".gitattributes",
  "/images",
  "/tests",
]

[project.optional-dependencies]
dev = [
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "mypy-extensions>=1.0.0",
    "typing_extensions>=4.5.0",
    "types-pytz>=2023.3.0.0",
    "types-requests>=2.28.11.17",
    "types-tzlocal>=4.3.0.0",
    "types-urllib3>=1.26.25.10"
]

[tool.black]
line-length = 90
# force-exclude = '''.*conditions.py|.*errors.py'''

[tool.isort]
profile = "black"
line_length = 90
skip_gitignore = true

[tool.mypy]
strict = true
pretty = true
show_error_codes = true
incremental = true
disallow_untyped_defs = true
show_column_numbers = true
show_error_context = true
allow_redefinition = true
